--- a/src/app/search-dev/search-developer/search-developer.component.html
+++ b/src/app/search-dev/search-developer/search-developer.component.html
@@ -3,18 +3,31 @@
     <div class="row">
       <div class="col-md-6 m-auto">
         <h3 class="text-center mb-3">
-          <i class="fab fa-js-square fa-lg brand-logo-color"></i><span class="title-margin">Awesome JS Dev Indonesia</span>
+          <i class="fab fa-js-square fa-lg brand-logo-color"></i><span class="title-margin">Awesome JS Dev
+            Indonesia</span>
         </h3>
         <div class="card card-body mb-1">
-          <div class="form-group">
-            <input (keyup)="searchDeveloper($event.target.value)" [(ngModel)]="stringPencarian" type="text" id="search" class="form-control form-control-lg" placeholder="Masukkan nama pengembang...">
+          <p class="lead">
+            Daftar pengembang atau developer JavaScript asal Indonesia yang <strong class="block-awesome">AWESOME</strong> . Silahkan cari dengan memasukkan kata kunci di kotak pencarian di bawah ini. Ingin menambahkan pengembang yang lain? <a href="/tentang-app">Cek disini</a>.
+          </p>
+          <div class="form-group mt-1">
+            <input (keyup)="searchDeveloper($event.target.value)" [(ngModel)]="stringPencarian" type="text" id="search"
+              class="form-control form-control-lg" placeholder="Masukkan nama pengembang...">
           </div>
         </div>
+
         <div id="match-list">
-          <!-- <div class="card card-body mb-1 cardmargin" *ngFor="let bandara of listBandaraFilter; trackBy: trackByFunctions; let indx = index">
-            <h4>{{bandara.nama}} ({{bandara.iata}}) <span class="text-primary">{{bandara.kategori}}</span></h4>
-            <small>{{bandara.alamat}}</small>
-          </div> -->
+          <!-- LIST CARD -->
+          <div class="card bg-light mb-3 cardmargin"
+            *ngFor="let devitem of listPengembangFiltered; trackBy: trackListByFunctions; let indx = index">
+            <div class="card-header"><h4>Dark card title</h4></div>
+            <div class="card-body">
+              <p class="card-text"><i class="fab fa-facebook-square fa-2x  align-middle"></i>Facebook Lorem Ipsum Dolor Sit</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
