Migrasi ke Angular CLI 8.1

--- a/src/app/search-dev/search-developer/search-developer.component.html
+++ b/src/app/search-dev/search-developer/search-developer.component.html
@@ -13,8 +13,7 @@
         <div class="card card-body mb-1">
           <p class="lead">
             Daftar pengembang atau developer JavaScript asal Indonesia yang <strong
-              class="block-awesome">AWESOME</strong> . Silahkan cari dengan memasukkan kata kunci di kotak pencarian di
-            bawah ini. Ingin menambahkan pengembang yang lain? <a href="/tentang-app">Cek disini</a>.
+              class="block-awesome">AWESOME</strong> . Silahkan cari dengan memasukkan kata kunci di kotak pencarian di bawah ini. Ingin menambahkan pengembang yang lain? <a href="/tentang-app">Cek disini</a>.
           </p>
 
 
@@ -52,7 +51,7 @@
               <p class="card-text">
                 <span>Skill {{devitem.stringSkill}} . </span>
                 <span>Github profile <a href="{{devitem.stringGithubUrl}}"> {{devitem.stringGithubAlias}}</a> . </span>
-                <span>Facebook profile <a href="{{stringFacebookUrl}}">{{devitem.stringFacebookAlias}}</a> . </span>
+                <span>Facebook profile <a href="{{devitem.stringFacebookUrl}}">{{devitem.stringFacebookAlias}}</a> . </span>
                 <span>Twitter profile  <a href="{{devitem.stringTwitterUrl}}">{{devitem.stringTwitterAlias}}</a> . </span>
                 <span>LinkedIn profile <a href="{{devitem.stringLinkedInUrl}}">{{devitem.stringLinkedinAlias}}</a> . </span>
                 <span>Blog homepage <a href="{{devitem.stringBlogUrl}}">{{devitem.stringBlogAlias}}</a> . </span>
