Halaman tentang aplikasi

--- a/src/app/aboutapps/about-aplikasi/about-aplikasi.component.html
+++ b/src/app/aboutapps/about-aplikasi/about-aplikasi.component.html
@@ -1,1 +1,34 @@
-<p>about-aplikasi works!</p>
+<body>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-8 m-auto">
+
+        <!-- KONTAK APLIKASI -->
+        <div class="card card-body mb-1">
+
+          <h4 class="text-center mb-3">
+            <i class="fab fa-js-square fa-lg brand-logo-color"></i><span class="title-margin">Awesome JS Dev
+              Indonesia</span>
+          </h4>
+          <h5 class="text-center mb-3 version-theme">
+            versi 1.0.0 @ {{datePrivacyPolicy}}
+          </h5>
+
+          <p class="lead">
+            Aplikasi web sederhana yang berisi daftar developer dan programmer JavaScript dari
+            Indonesia yang <strong class="block-awesome">AWESOME</strong> . Data-data ini bersumber dari repository
+            Github Awesome JS Dev ID yang dapat diakses disini <a href="https://github.com/mazipan/awesome-js-dev-id"
+              target="_blank">https://github.com/mazipan/awesome-js-dev-id</a>. Jika
+            ingin menambahkan data atau melakukan koreksi data, silahkan lakukan koreksi dengan Pull Request ke
+            repository tersebut.
+          </p>
+          <hr>
+          <div>
+            <button type="button" class="btn btn-success float-right" (click)="navigasiHalamanAwal()">Kembali ke
+              Awal</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
