--- a/src/app/search-dev/search-developer/search-developer.component.html
+++ b/src/app/search-dev/search-developer/search-developer.component.html
@@ -12,9 +12,9 @@
         <!-- BOX PENCARIAN -->
         <div class="card card-body mb-1">
           <p class="lead">
-            Daftar pengembang atau developer JavaScript asal Indonesia yang <strong
+            Daftar developer dan programmer JavaScript dari Indonesia yang <strong
               class="block-awesome">AWESOME</strong> . Silahkan cari dengan memasukkan kata kunci di kotak pencarian di
-            bawah ini. Ingin menambahkan pengembang yang lain? Silahkan <a href="/tentang-app">cek disini</a>.
+            bawah ini. Ingin menambahkan pengembang yang lain? Silahkan <a routerLink="/tentang-app">cek disini</a>.
           </p>
 
 
