Perbaikan bahasa dan index html

--- a/src/app/aboutapps/about-aplikasi/about-aplikasi.component.html
+++ b/src/app/aboutapps/about-aplikasi/about-aplikasi.component.html
@@ -11,21 +11,24 @@
               Indonesia</span>
           </h4>
           <h5 class="text-center mb-3 version-theme">
-            versi 1.0.0 @ {{datePrivacyPolicy}}
+            version 1.0.0 @ Gulajava {{datePrivacyPolicy}}
           </h5>
 
           <p class="lead">
+              Simple web application that contains a list of JavaScript developers and programmers from Indonesia that are <strong class="block-awesome">AWESOME</strong> . These data are sourced from the Awesome JS Dev ID Github repository which can be accessed here <a href="https://github.com/mazipan/awesome-js-dev-id"
+              target="_blank">https://github.com/mazipan/awesome-js-dev-id</a>.  If you want to add data or make data corrections, please make corrections with the Pull Request to the repository. This Awesome JS Dev Indonesia application source code is on the following Github <a href="https://github.com/javascript-indonesias/AwesomeJSDevIdSource" target="_blank">https://github.com/javascript-indonesias/AwesomeJSDevIdSource</a> .  You can see it for use in learning and examples of web implementation with PWA's Progressive Web Apps.
+          </p>
+          <!-- <p class="lead">
             Aplikasi web sederhana yang berisi daftar developer dan programmer JavaScript dari
             Indonesia yang <strong class="block-awesome">AWESOME</strong> . Data-data ini bersumber dari repository
             Github Awesome JS Dev ID yang dapat diakses disini <a href="https://github.com/mazipan/awesome-js-dev-id"
               target="_blank">https://github.com/mazipan/awesome-js-dev-id</a>. Jika
             ingin menambahkan data atau melakukan koreksi data, silahkan lakukan koreksi dengan Pull Request ke
-            repository tersebut.
-          </p>
+            repository tersebut. Kode sumber aplikasi Awesome JS Dev Indonesia ini ada di Github berikut <a href="https://github.com/javascript-indonesias/AwesomeJSDevIdSource" target="_blank">https://github.com/javascript-indonesias/AwesomeJSDevIdSource</a> . Silahkan dilihat untuk dipakai belajar dan contoh implementasi web dengan Progressive Web Apps PWA.
+          </p> -->
           <hr>
           <div>
-            <button type="button" class="btn btn-success float-right" (click)="navigasiHalamanAwal()">Kembali ke
-              Awal</button>
+            <button type="button" class="btn btn-success float-right" (click)="navigasiHalamanAwal()">Back to Home</button>
           </div>
         </div>
       </div>
